--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   colorfilter_generator: ^0.0.8
   hand_signature: ^2.3.0+1
   flutter_image_compress: ^1.1.3
+  image_downloader: ^0.31.0
   
   
   
