--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   apphud: ^2.2.6
   webview_flutter: ^3.0.4
-  url_launcher: ^6.1.6
   shared_preferences: ^2.0.15
-  # rate_my_app: ^1.1.4
   flutter_local_notifications: ^9.8.0+1
   overlay_support: ^1.2.1
   firebase_messaging: ^14.2.2
@@ -68,6 +66,7 @@ dependencies:
   hand_signature: ^2.3.0+1
   flutter_image_compress: ^1.1.3
   image_downloader: ^0.31.0
+  in_app_review: ^2.0.6
   
   
   
